--- a/index.html
+++ b/index.html
@@ -9,24 +9,26 @@
 </head>
  
 <body>
-  <h1>Tic-Tac-Toe</h1>
-  <table>
-    <tr>
-      <td id="cell0">&nbsp;</td>
-      <td id="cell1">&nbsp;</td>
-      <td id="cell2">&nbsp;</td>
-    </tr>
-    <tr>
-      <td id="cell3">&nbsp;</td>
-      <td id="cell4">&nbsp;</td>
-      <td id="cell5">&nbsp;</td>
-    </tr>
-    <tr>
-      <td id="cell6">&nbsp;</td>
-      <td id="cell7">&nbsp;</td>
-      <td id="cell8">&nbsp;</td>
-    </tr>
-  </table><br>
-  <input type="button" id="btnNewGame" value="New Game">
+  <div class="divCenter">
+    <h1>Tic-Tac-Toe</h1>
+    <table>
+      <tr>
+        <td id="cell0">&nbsp;</td>
+        <td id="cell1">&nbsp;</td>
+        <td id="cell2">&nbsp;</td>
+      </tr>
+      <tr>
+        <td id="cell3">&nbsp;</td>
+        <td id="cell4">&nbsp;</td>
+        <td id="cell5">&nbsp;</td>
+      </tr>
+      <tr>
+        <td id="cell6">&nbsp;</td>
+        <td id="cell7">&nbsp;</td>
+        <td id="cell8">&nbsp;</td>
+      </tr>
+    </table><br>
+    <input type="button" id="btnNewGame" value="New Game">
+  </div>
 </body>
 </html>
